test/error/dataType1.stg
data Bool1 = True | False;
data Bool1 = Nil | Con;
